@@ -5,16 +5,16 @@ plugins {
     id 'java'
     id 'idea'
     id 'project-report'
-    id 'org.springframework.boot' version '2.2.0.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'org.springframework.boot' version '2.2.4.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 }
 
 group = 'org.gty'
-version = '1.0.7.RELEASE'
+version = '1.0.8.RELEASE'
 description = 'Spring Boot Reactive Demo'
 
-java.sourceCompatibility = JavaVersion.VERSION_12
-java.targetCompatibility = JavaVersion.VERSION_12
+java.sourceCompatibility = JavaVersion.VERSION_13
+java.targetCompatibility = JavaVersion.VERSION_13
 [compileJava, compileTestJava]*.options*.encoding = "${StandardCharsets.UTF_8}"
 javadoc.options.encoding = "${StandardCharsets.UTF_8}"
 
@@ -64,34 +64,34 @@ dependencies {
 //  compileOnly 'org.projectlombok:lombok'
 //  annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'org.springframework.retry:spring-retry:1.2.4.RELEASE'
-    implementation 'org.springframework.session:spring-session-data-redis:2.2.0.RELEASE'
-    implementation 'org.springframework.kafka:spring-kafka:2.3.1.RELEASE'
+//  implementation 'org.springframework.retry:spring-retry:1.2.5.RELEASE'
+    implementation 'org.springframework.session:spring-session-data-redis:2.2.1.RELEASE'
+    implementation 'org.springframework.kafka:spring-kafka:2.4.2.RELEASE'
 //  implementation 'org.springframework.security:spring-security-ldap:5.1.6.RELEASE'
 
-    implementation 'org.flywaydb:flyway-core:6.0.6'
-    implementation 'org.postgresql:postgresql:42.2.8'
+    implementation 'org.flywaydb:flyway-core:6.2.2'
+    implementation 'org.postgresql:postgresql:42.2.10'
     implementation 'com.lmax:disruptor:3.4.2'
 //  implementation 'io.jsonwebtoken:jjwt:0.9.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.10.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.10.0'
-    implementation 'com.zaxxer:HikariCP:3.4.1'
-    implementation 'com.google.guava:guava:28.1-jre'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.10.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.10.2'
+    implementation 'com.zaxxer:HikariCP:3.4.2'
+    implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    implementation 'com.ibm.icu:icu4j:64.2'
+    implementation 'com.ibm.icu:icu4j:65.1'
 
-    implementation 'commons-beanutils:commons-beanutils:1.9.3'
-    implementation 'commons-codec:commons-codec:1.12'
+    implementation 'commons-beanutils:commons-beanutils:1.9.4'
+    implementation 'commons-codec:commons-codec:1.13'
     implementation 'commons-fileupload:commons-fileupload:1.4'
     implementation 'commons-io:commons-io:2.6'
     implementation 'org.apache.commons:commons-lang3:3.9'
-    implementation 'org.apache.commons:commons-text:1.7'
+    implementation 'org.apache.commons:commons-text:1.8'
     implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'org.apache.commons:commons-collections4:4.3'
-    implementation 'org.apache.commons:commons-compress:1.18'
-    implementation 'org.apache.commons:commons-pool2:2.6.2'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'org.apache.commons:commons-compress:1.19'
+    implementation 'org.apache.commons:commons-pool2:2.8.0'
 
 //  implementation 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
 //  implementation 'org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE'
@@ -99,7 +99,7 @@ dependencies {
 //  implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
 //  implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0'
 
-    implementation 'org.hibernate.validator:hibernate-validator:6.0.17.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:6.1.2.Final'
 //  implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
@@ -116,6 +116,13 @@ dependencies {
 clean.doLast {
     project.delete "$projectDir${FileSystems.default.separator}out${FileSystems.default.separator}"
 }
+
+// for Java 12 and 13 features
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+bootRun.jvmArgs(['--enable-preview'])
 
 task buildApp(type: GradleBuild) {
     tasks = ['clean', 'bootJar']
